# void_pointer

./: .gitignore  README.md  env_collection.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  notes.txt  packages-apt.txt  packages-python3.txt
void_pointer_ws/src/sad_talker/: CMakeLists.txt  app_sadtalker.py  inference.py  package.xml  predict.py  setup.py
void_pointer_ws/src/sad_talker/results/2023_12_31_21.16.55/: art_10##RD_Radio31_000.mat  art_10##RD_Radio31_000.txt
void_pointer_ws/src/sad_talker/src/sad_talker/: generate_batch.py  gradio_demo.py  test_audio2coeff.py
void_pointer_ws/src/speech_to_text/: CMakeLists.txt  package.xml  setup.py
void_pointer_ws/src/speech_to_text/src/speech_to_text/: __main__.py  audio_transcriber.py  void_pointer.py  websoket_server.py
void_pointer_ws/src/speech_to_text/src/speech_to_text/settings/: user_settings.json
void_pointer_ws/src/tortoise/: CMakeLists.txt  package.xml  setup.py  tortoise_tts.ipynb
void_pointer_ws/src/tortoise/src/tortoise/: api.py  api_fast.py
void_pointer_ws/src/valle_x/: CMakeLists.txt  package.xml  setup.py
void_pointer_ws/src/void_pointer/: CMakeLists.txt  package.xml  setup.py
void_pointer_ws/src/void_pointer/comms/: client.py  server.py
void_pointer_ws/src/void_pointer/proto/: audio.proto
void_pointer_ws/src/void_pointer/scripts/: audio_trials.py  gRPC_bash.sh
void_pointer_ws/src/void_pointer/src/void_pointer/: utils.py  void_pointer.py
void_pointer_ws/src/void_pointer/static/: recordAudio.js
void_pointer_ws/src/void_pointer/templates/: index.html  index_flask.html
(+30 files in other folders)
